<resources>

    <string name="app_name">Easylink-MXCHIP</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_easylink_xsplash_screen">EasyLinkSplashScreen</string>
    <string name="easylink_version_text">EMW</string>
    
    
    <string name="config_title">Device Configuration</string>
    <string name="footer_title">DESIGNED AND DEVELOPED BY</string>
    <string name="password_hint">Password </string>
    <string name="ssid_label">SSID</string>
    <string name="gatewayip">Gateway IP Address</string>

    <string name="key_label">Key</string>
    <string name="devicename_label">Device Name</string>
    <string name="search_show_label">Show Msg</string>
    <string name="start_label">Start</string>
    <string name="search_label">Search</string>
    <string name="send_label">Send MIDI</string>
    <string name="stop_label">Stop</string>
    <string name="back_label">Back</string>
    <string name="about_us_label">About Us</string>
    <string name="contact_label">Contact</string>
    <string name="about_us_desc_para_two">We continue to shatter traditional paradigms thanks largely to our dedication to and belief in quality ,communicative design.</string>
    <string name="about_us_content">Rav</string>
  
    
    <string name="alert_easylink_title">Easylink Alert</string>
    <string name="alert_invalid_input_title">Invalid input</string>
     <string name="alert_successfully_connected">Easylink App Connected Successfully</string>
     <string name="alert_connection_failed">Failed to configure EMW device</string>
       <string name="alert_connection_timeout">Connection to EMW was timed out.Please try again</string>
      <string name="alert_successfully_failed">Failed to configure EMW device</string>
    <string name="alert_no_network_title">No Network</string>
    <string name="alert_invalid_password_msg">Please enter valid password</string>
    <string name="alert_invalid_gatewayip_msg">Please enter valid Gateway IP address</string>
    <string name="alert_invalid_ssid_mesg">Please enter valid SSID</string>
    <string name="alert_invalid_key_mesg">Please enter valid Key exactly 16 characters</string>
    <string name="alert_no_wifi_mesg">WiFi not available.Please check your WiFi connection.</string>

    
    <string name="config_default_gateway_val">127.0.0.1</string>
    <string name="config_default_device_name">Device Name</string>
	
    <!--Utility Strings -->
    <string name="easylink_string_ok">ok</string>

</resources>